adicionando mensagem no wpp.me

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-
 </head>
 
 <body>
@@ -24,7 +23,7 @@
                     <li><a href="#footer">contato</a></li>
                     <li><a class="btn" href="#contato">agendamento</a></li>
                 </ul>
-                <ul data-dropdown id="dropdown-container">
+                <ul style="display: none" data-dropdown class="dropdown" id="dropdown-container">
                     <img data-dropdown src="svg/menu-mobile.svg" alt="Menu Mobile">
                     <ul class="dropdown-menu">
                         <li><a href="#sobre-mim">sobre</a></li>
@@ -118,7 +117,7 @@
                             <a href="https://instagram.com/rosapsicologa_" target="blank"><img src="svg/instagram.svg" alt="Instagram"><span class="icone-text">@rosapsicologa_</span></a>
                         </li>
                         <li>
-                            <a href="https://wa.me/5521969382521" target="blank"><img src="svg/whatsapp.svg" alt="Whatsapp"><span class="icone-text">(21) 96938-2521</span></a>
+                            <a href="https://whatsa.me/5521969382521/?t=Ol%C3%A1,%20Jaque!%20Vim%20pelo%20seu%20site%20e%20gostaria%20de%20saber%20mais%20sobre%20consultas,%20agendamentos%20e%20valores." target="blank"><img src="svg/whatsapp.svg" alt="Whatsapp"><span class="icone-text">(21) 96938-2521</span></a>
                         </li>
                     </ul>
                 </div>
