adicionado wpp.me no footer

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <p class="info-text">Campo Grande - RJ</p>
                         </li>
                         <li><img src="svg/tel.svg" alt="Telefone">
-                            <a href="https://wa.me/5521969382521" class="info-text">(21) 96938-2521</a>
+                            <a href="https://whatsa.me/5521969382521/?t=Ol%C3%A1,%20Jaque!%20Vim%20pelo%20seu%20site%20e%20gostaria%20de%20saber%20mais%20sobre%20consultas,%20agendamentos%20e%20valores." class="info-text">(21) 96938-2521</a>
                         </li>
                         <li><img src="svg/mail.svg" alt="email">
                             <p class="info-text">rosapsicologa@gmail.com</p>
