mudança de font-size de alguns containers

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="sobre-content">
                 <h1 class="h1-atendimentos">atendimentos <br>online<span class="decorador-texto-azul">.</span></h1>
                 <p class="p-atendimentos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Turpis id etiam convallis nec elit sagittis eget. Tellus vestibulum ut vitae posuere aliquet donec magnis. Aliquam nunc hendrerit pretium faucibus. </p>
-                <ul>
+                <ul class="sobre-atendimentos-icons">
                     <li><img src="svg/conforto.svg" alt="Conforto" class="icone-atendimentos"> <span class="icone-text"> conforto.</span></li>
                     <li><img src="svg/sustentabilidade.svg" alt="Sustentabilidade" class="icone-atendimentos"><span class="icone-text"> sustentabilidade.</span></li>
                     <li><img src="svg/flexibilidade.svg" alt="Flexibilidade" class="icone-atendimentos"> <span class="icone-text">flexibilidade.</span></li>
