--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="estrutura">
         <header class="header">
-            <a href="#" class="logo"><img src="svg/jaque-rosa.svg" alt="Jaque Rosa"></a>
+            <a href="/pdf/teste.pdf" target="blank" class="logo"><img src="svg/jaque-rosa.svg" alt="Jaque Rosa"></a>
             <nav class="js-menu">
                 <ul class="nav-menu">
                     <li><a href="#sobre-mim">sobre</a></li>
@@ -26,7 +26,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="#sobre-mim">sobre</a></li>
                         <li><a href="#footer">contato</a></li>
-                        <li><a href="#contato" href="#contato">agendamento</a></li>
+                        <li><a href="#contato">agendamento</a></li>
                     </ul>
                 </ul>
             </nav>
@@ -40,7 +40,7 @@
             <div class="intro-content">
                 <h1 class="h1-intro">Jaquelaine<br> Rosa</h1>
                 <h2 class="h2-intro"> psicoterapia online<span class="decorador-texto-amarelo">.</span></h2>
-                <p class="p-intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="p-intro">Jaquelaine Rosa Malheiros Neves, CRP: </p>
                 <nav class="js-menu">
                     <div class="nav-menu">
                         <a class="btn saiba-mais" href="#atendimentos-online">saiba mais</a>
@@ -53,7 +53,7 @@
         <section class="sobre-atendimentos box-anime" id="atendimentos-online" data-anime="scroll">
             <div class="sobre-content">
                 <h1 class="h1-atendimentos">atendimentos <br>online<span class="decorador-texto-azul">.</span></h1>
-                <p class="p-atendimentos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Turpis id etiam convallis nec elit sagittis eget. Tellus vestibulum ut vitae posuere aliquet donec magnis. Aliquam nunc hendrerit pretium faucibus. </p>
+                <p class="p-atendimentos"> No momento estamos trabalhando somente com atendimento online, modalidade que vem se popularizando muito, uma vez que é extremamente cômodo e simples de encaixar na rotina. Basta apenas um local privado e seu smartphone.</p>
                 <ul class="sobre-atendimentos-icons">
                     <li><img src="svg/conforto.svg" alt="Conforto" class="icone-atendimentos"> <span class="icone-text"> conforto.</span></li>
                     <li><img src="svg/sustentabilidade.svg" alt="Sustentabilidade" class="icone-atendimentos"><span class="icone-text"> sustentabilidade.</span></li>
@@ -73,10 +73,13 @@
                 <img class="pata" src="svg/pata.svg" alt="Pata de cachorro">
             </div>
             <div class="sobre-mim-img"><img src="img/sobre-mim-img.png" alt="Jaque Rosa"></div>
-            <div class="sobre-mim-text">
+            <div class="sobre-mim-text js-menu">
                 <h1 class="h1-sobre-mim">um pouquinho <br class="break"> sobre mim<span class="decorador-texto-amarelo">.</span></h1>
-                <p class="p-sobre-mim">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Turpis id etiam convallis nec elit sagittis eget. Tellus vestibulum ut vitae posuere aliquet donec magnis. Aliquam nunc hendrerit pretium faucibus. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Turpis id etiam convallis nec elit sagittis eget. Tellus vestibulum ut vitae posuere aliquet donec magnis. Aliquam nunc hendrerit pretium faucibus. </p>
+                <p class="p-sobre-mim">Oiii, separei esse espacinho no site para uma breve apresentação. Sou natural de Paty do Alferes - RJ, neta/sobrinha de agricultores e filha de professor de geografia. Aos 18 anos vim para o Rio de Janeiro afim de estudar e cá estou, depois
+                    de 7 anos, formada em Psicologia. Hoje, como mulher e psicóloga, entendo o poder da minha trajetória. Sou a primeira mulher da família a ter uma formação acadêmica e uma das poucas a se arriscar e vir para a "cidade grande" buscando
+                    melhores oportunidades. Bom, agora você sabe mais sobre mim. Qualquer coisa me manda um “oi” pelos meios de
+                    <a href="#contato" class="hyperlink-texto">contato</a> disponíveis no site.
+                </p>
             </div>
             <img class="decorador-azul" src="svg/decorador-azul.svg" alt="Borboleta azul">
         </section>
@@ -86,8 +89,8 @@
 
                 <img class="decorador-amarelo-escuro2" src="svg/decorador-amarelo-escuro.svg" alt="Borboleta amarela">
                 <h1 class="h1-importancia">a importancia <br class="break"> da psicoterapia<span class="decorador-texto-azul">.</span></h1>
-                <p class="p-importancia">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Turpis id etiam convallis nec elit sagittis eget. Tellus vestibulum ut vitae posuere aliquet donec magnis. Aliquam nunc hendrerit pretium faucibus. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Turpis id etiam convallis nec elit sagittis eget. Tellus vestibulum ut vitae posuere aliquet donec magnis. Aliquam nunc hendrerit pretium faucibus. </p>
+                <p class="p-importancia">A representação da borboleta saindo do casulo remete a transformação que cada indivíduo pode vivenciar ao se permitir olhar para si. Ás vezes isso pode ser muito doloroso, desse modo, faz-se importante o espaço que a psicoterapia oferece.
+                    Nesse sentido, destaca-se como benefício desse recurso o acolhimento, a escuta sem julgamento, o autoconhecimento, a ressignificação, a empatia, entre outros. </p>
                 <ul class="importancia-psicoterapia-icons">
                     <li><img src="svg/empatia.svg" alt="Empatia"><span class="icone-text">empatia</span>
                     </li>
