Redução de margens display mobile

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 <img class="pata" src="svg/pata.svg" alt="Pata de cachorro">
             </div>
             <div class="sobre-mim-img"><img src="img/sobre-mim-img.png" alt="Jaque Rosa"></div>
-            <div class="sobre-mim-text js-menu">
+            <div class="sobre-mim-text ">
                 <h1 class="h1-sobre-mim">um pouquinho <br class="break"> sobre mim<span class="decorador-texto-amarelo">.</span></h1>
-                <p class="p-sobre-mim">Oiii, separei esse espacinho no site para uma breve apresentação. Sou natural de Paty do Alferes - RJ, neta/sobrinha de agricultores e filha de professor de geografia. Aos 18 anos vim para o Rio de Janeiro afim de estudar e cá estou, depois
+                <p class="p-sobre-mim js-menu">Oiii, separei esse espacinho no site para uma breve apresentação. Sou natural de Paty do Alferes - RJ, neta/sobrinha de agricultores e filha de professor de geografia. Aos 18 anos vim para o Rio de Janeiro afim de estudar e cá estou, depois
                     de 7 anos, formada em Psicologia. Hoje, como mulher e psicóloga, entendo o poder da minha trajetória. Sou a primeira mulher da família a ter uma formação acadêmica e uma das poucas a se arriscar e vir para a "cidade grande" buscando
                     melhores oportunidades. Bom, agora você sabe mais sobre mim. Qualquer coisa me manda um “oi” pelos meios de
                     <a href="#contato" class="hyperlink-texto">contato</a> disponíveis no site.
@@ -143,7 +143,7 @@
                     </ul>
                 </div>
                 <div class="sobre-footer">
-                    <h3 class="h3-footer">informações adicionais</h3>
+                    <h3 class="h3-footer">informações adicionais<span class="decorador-texto-amarelo">.</span></h3>
                     <p class="info-text">A profissional Jaquelaine Rosa Malheiros Neves (CRP: 000000) realiza atendimentos online para pacientes localizados na cidade do Rio de Janeiro.</p>
                 </div>
             </div>
@@ -159,5 +159,4 @@
     </div>
     <script src="js/animations.js">
     </script>
-
 </body>
