correções html e css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Rosa Psicologa</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -67,7 +66,7 @@
 
         <section class="sobre-mim box-anime" data-anime="scroll" id="sobre-mim">
             <div class="icones">
-                <img class="nota-musical" src="svg/musica.svg" alt="Nota musical"></a>
+                <img class="nota-musical" src="svg/musica.svg" alt="Nota musical">
                 <img class="camera-fotografica" src="svg/camera.svg" alt="Camera fotografica">
                 <img class="mulher" src="svg/mulher.svg" alt="Feminismo simbolo">
                 <img class="pata" src="svg/pata.svg" alt="Pata de cachorro">
@@ -155,7 +154,6 @@
                 </p>
             </div>
         </footer>
-    </div>
     </div>
     <script src="js/animations.js">
     </script>
