correção de conteúdo e margem

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section class="sobre-atendimentos box-anime" id="atendimentos-online" data-anime="scroll">
             <div class="sobre-content">
                 <h1 class="h1-atendimentos">atendimentos <br>online<span class="decorador-texto-azul">.</span></h1>
-                <p class="p-atendimentos"> No momento estamos trabalhando somente com atendimento online, modalidade que vem se popularizando muito, uma vez que é extremamente cômodo e simples de encaixar na rotina. Basta apenas um local privado e seu smartphone.</p>
+                <p class="p-atendimentos"> No momento estou trabalhando somente com atendimento online, modalidade que vem se popularizando muito, uma vez que é extremamente cômodo e simples de encaixar na rotina. Basta apenas um local privado e seu smartphone.</p>
                 <ul class="sobre-atendimentos-icons">
                     <li><img src="svg/conforto.svg" alt="Conforto" class="icone-atendimentos"> <span class="icone-text"> conforto.</span></li>
                     <li><img src="svg/sustentabilidade.svg" alt="Sustentabilidade" class="icone-atendimentos"><span class="icone-text"> sustentabilidade.</span></li>
