mudanças de conteúdo e correção de margins

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             <div class="sobre-mim-img"><img src="img/sobre-mim-img.png" alt="Jaque Rosa"></div>
             <div class="sobre-mim-text ">
                 <h1 class="h1-sobre-mim">um pouquinho <br class="break"> sobre mim<span class="decorador-texto-amarelo">.</span></h1>
-                <p class="p-sobre-mim js-menu">Oiii, separei esse espacinho no site para uma breve apresentação. Sou natural de Paty do Alferes - RJ, neta/sobrinha de agricultores e filha de professor de geografia. Aos 18 anos vim para o Rio de Janeiro afim de estudar e cá estou, depois
-                    de 7 anos, formada em Psicologia. Hoje, como mulher e psicóloga, entendo o poder da minha trajetória. Sou a primeira mulher da família a ter uma formação acadêmica e uma das poucas a se arriscar e vir para a "cidade grande" buscando
-                    melhores oportunidades. Bom, agora você sabe mais sobre mim. Qualquer coisa me manda um “oi” pelos meios de
-                    <a href="#contato" class="hyperlink-texto">contato</a> disponíveis no site.
+                <p class="p-sobre-mim js-menu">Oiii, separei esse espacinho no site para uma breve apresentação. Sou natural de Paty do Alferes - RJ, neta/sobrinha de agricultores e filha de professor de geografia. Aos 18 anos vim para o Rio de Janeiro a fim de estudar e cá estou,
+                    depois de 7 anos, formada em Psicologia. Hoje, como mulher e psicóloga, entendo o poder da minha trajetória. Sou a primeira mulher da família a ter uma formação acadêmica e uma das poucas a se arriscar e vir para a "cidade grande"
+                    buscando melhores oportunidades. Bom, agora você sabe mais sobre mim. Qualquer coisa me manda um “oi” pelos meios de
+                    <a href="#contato" class="hyperlink-texto">contato</a> disponíveis no site. ❤
                 </p>
             </div>
             <img class="decorador-azul" src="svg/decorador-azul.svg" alt="Borboleta azul">
@@ -89,7 +89,7 @@
                 <img class="decorador-amarelo-escuro2" src="svg/decorador-amarelo-escuro.svg" alt="Borboleta amarela">
                 <h1 class="h1-importancia">a importancia <br class="break"> da psicoterapia<span class="decorador-texto-azul">.</span></h1>
                 <p class="p-importancia">A representação da borboleta saindo do casulo remete a transformação que cada indivíduo pode vivenciar ao se permitir olhar para si. Ás vezes isso pode ser muito doloroso, desse modo, faz-se importante o espaço que a psicoterapia oferece.
-                    Nesse sentido, destaca-se como benefício desse recurso o acolhimento, a escuta sem julgamento, o autoconhecimento, a ressignificação, a empatia, entre outros. </p>
+                    Nesse sentido, destaca-se como benefícios desse recurso: o acolhimento, a escuta sem julgamento, o autoconhecimento, a ressignificação, a empatia, entre outros. </p>
                 <ul class="importancia-psicoterapia-icons">
                     <li><img src="svg/empatia.svg" alt="Empatia"><span class="icone-text">empatia</span>
                     </li>
