adição crp no conteudo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="intro-content">
                 <h1 class="h1-intro">Jaquelaine<br> Rosa</h1>
                 <h2 class="h2-intro"> psicoterapia online<span class="decorador-texto-amarelo">.</span></h2>
-                <p class="p-intro">Jaquelaine Rosa Malheiros Neves, CRP: </p>
+                <p class="p-intro">Jaquelaine Rosa Malheiros Neves, CRP-05/68801 </p>
                 <nav class="js-menu">
                     <div class="nav-menu">
                         <a class="btn saiba-mais" href="#atendimentos-online">saiba mais</a>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="sobre-footer">
                     <h3 class="h3-footer">informações adicionais<span class="decorador-texto-amarelo">.</span></h3>
-                    <p class="info-text">A profissional Jaquelaine Rosa Malheiros Neves (CRP: 000000) realiza atendimentos online para pacientes localizados na cidade do Rio de Janeiro.</p>
+                    <p class="info-text">A profissional Jaquelaine Rosa Malheiros Neves (CRP-05/68801) realiza atendimentos online para pacientes localizados na cidade do Rio de Janeiro.</p>
                 </div>
             </div>
 
