remoção de algumas funçoes teste remanecentes, inserção da logo final e do favicon

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="/svg/favicon.svg">
+
 </head>
 
 <body>
-
     <div class="estrutura">
         <header class="header">
-            <a href="/pdf/teste.pdf" target="blank" class="logo"><img src="svg/jaque-rosa.svg" alt="Jaque Rosa"></a>
             <nav class="js-menu">
+                <a href="#intro" class="logo"><img class="logo-img" src="svg/logo.svg" alt="Jaque Rosa"></a>
                 <ul class="nav-menu">
                     <li><a href="#sobre-mim">sobre</a></li>
                     <li><a href="#footer">contato</a></li>
