Conteudo textual da pagina

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="sobre-footer">
                     <h3 class="h3-footer">informações adicionais<span class="decorador-texto-amarelo">.</span></h3>
-                    <p class="info-text">A profissional Jaquelaine Rosa Malheiros Neves (CRP-05/68801) realiza atendimentos online para pacientes localizados na cidade do Rio de Janeiro.</p>
+                    <p class="info-text">A profissional Jaquelaine Rosa Malheiros Neves (CRP-05/68801) realiza atendimentos de psicoterapia online.</p>
                 </div>
             </div>
 
