--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <title>Rosa Psicologa</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <meta property="og:image" content="https://i.ibb.co/XSLzRpb/share-preview.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="649" />
+    <meta property="og:image:height" content="340" />
+    <meta property="og:image:alt" content="Jaquelaine Rosa Psicoterapia - Logo" />
+    <meta property="og:description" content="Jaquelaine Rosa - Psicoterapia Online" />
+
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="/svg/favicon.svg">
+
 
 </head>
 
