mudança de conteudo da aba contato

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <h1 class="h1-contato">social<br>media<span class="decorador-texto-azul">.</span></h1>
                         <img src="svg/jaque-trabalhando.svg" alt="Jaque Trabalhando">
                     </div>
-                    <p class="p-contato">Além de agendar suas consultas por aqui, você também pode me seguir para acompanhar conteúdos de psicologia.</p>
+                    <p class="p-contato">Entre em contato comigo pelos canais abaixo para mais informações sobre atendimentos e/ou caso queira acompanhar conteúdos sobre psicologia.</p>
                     <ul>
                         <li>
                             <a href="https://instagram.com/rosapsicologa_" target="blank"><img src="svg/instagram.svg" alt="Instagram"><span class="icone-text">@rosapsicologa_</span></a>
@@ -160,7 +160,7 @@
             <div class="copyright info-text">
                 <p>© 2022 Rosa Psicologa. Todos os direitos reservados</p>
                 <p>Desenvolvido por:
-                    <a href="https://www.linkedin.com/in/gabriel-silvino-1aa497164/" target="blank">Gabriel Silvino</a>
+                    <a href="https://linktr.ee/gabrielsiv" target="blank">Gabriel Silvino</a>
                 </p>
             </div>
         </footer>
