mudança de conteudo

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section class="sobre-atendimentos box-anime" id="atendimentos-online" data-anime="scroll">
             <div class="sobre-content">
                 <h1 class="h1-atendimentos">atendimentos <br>online<span class="decorador-texto-azul">.</span></h1>
-                <p class="p-atendimentos"> No momento estou trabalhando somente com atendimento online, modalidade que vem se popularizando muito, uma vez que é extremamente cômodo e simples de encaixar na rotina. Basta apenas um local privado e seu smartphone.</p>
+                <p class="p-atendimentos"> No momento estou trabalhando somente com atendimento online, modalidade que vem se popularizando muito, uma vez que é extremamente cômodo e simples de encaixar na rotina. Bastando apenas um local privado e seu smartphone, tablet ou pc.</p>
                 <ul class="sobre-atendimentos-icons">
                     <li><img src="svg/conforto.svg" alt="Conforto" class="icone-atendimentos"> <span class="icone-text"> conforto.</span></li>
                     <li><img src="svg/sustentabilidade.svg" alt="Sustentabilidade" class="icone-atendimentos"><span class="icone-text"> sustentabilidade.</span></li>
@@ -98,8 +98,8 @@
 
                 <img class="decorador-amarelo-escuro2" src="svg/decorador-amarelo-escuro.svg" alt="Borboleta amarela">
                 <h1 class="h1-importancia">a importancia <br class="break"> da psicoterapia<span class="decorador-texto-azul">.</span></h1>
-                <p class="p-importancia">A representação da borboleta saindo do casulo remete a transformação que cada indivíduo pode vivenciar ao se permitir olhar para si. Ás vezes isso pode ser muito doloroso, desse modo, faz-se importante o espaço que a psicoterapia oferece.
-                    Nesse sentido, destaca-se como benefícios desse recurso: o acolhimento, a escuta sem julgamento, o autoconhecimento, a ressignificação, a empatia, entre outros. </p>
+                <p class="p-importancia">Gosto da representação da borboleta saindo do casulo, pois remete a transformação que cada indivíduo pode vivenciar através do contato consigo mesmo. Olhar para si pode ser muito doloroso, desse modo, faz-se importante o espaço que a psicoterapia
+                    dispõe por oferecer acolhimento, escuta sem julgamento, empatia, e ainda facilita o autoconhecimento, a ressignificação, entre outros. </p>
                 <ul class="importancia-psicoterapia-icons">
                     <li><img src="svg/empatia.svg" alt="Empatia"><span class="icone-text">empatia</span>
                     </li>
@@ -147,7 +147,7 @@
                             <a href="https://whatsa.me/5521965401250/?t=Ol%C3%A1,%20Jaque!%20Vim%20pelo%20seu%20site%20e%20gostaria%20de%20saber%20mais%20sobre%20consultas,%20agendamentos%20e%20valores." class="info-text">(21) 96540-1250</a>
                         </li>
                         <li><img src="svg/mail.svg" alt="email">
-                            <p class="info-text">rosapsicologa@gmail.com</p>
+                            <p class="info-text">psicologarosa.neves@gmail.com</p>
                         </li>
                     </ul>
                 </div>
@@ -158,7 +158,7 @@
             </div>
 
             <div class="copyright info-text">
-                <p>© 2022 Rosa Psicologa. Todos os direitos reservados</p>
+                <p>© 2022 Rosa Psicologa. Alguns direitos reservados</p>
                 <p>Desenvolvido por:
                     <a href="https://linktr.ee/gabrielsiv" target="blank">Gabriel Silvino</a>
                 </p>
