--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
             <div class="footer-main">
                 <div class="info">
                     <ul class="informacoes">
+                        <h3 class="h3-footer">informações adicionais<span class="decorador-texto-amarelo">.</span></h3>
                         <li><img src="svg/pin.svg" alt="Localização">
                             <p class="info-text">Campo Grande - RJ</p>
                         </li>
@@ -152,7 +153,7 @@
                     </ul>
                 </div>
                 <div class="sobre-footer">
-                    <h3 class="h3-footer">informações adicionais<span class="decorador-texto-amarelo">.</span></h3>
+                    <h3 class="h3-footer">serviço prestado<span class="decorador-texto-amarelo">.</span></h3>
                     <p class="info-text">A profissional Jaquelaine Rosa Malheiros Neves (CRP-05/68801) realiza atendimentos de psicoterapia online.</p>
                 </div>
             </div>
