correção de bugs no safari

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <section class="contato box-anime" data-anime="scroll" id="contato">
             <div class="contato-esquerda">
                 <h2 class="h2-contato">gostou?</h2>
-                <h1 class="contato-titulo h1-contato">agende sua<br>consulta<span class="decorador-texto-amarelo">.</span></h1>
+                <h1 class="contato-titulo">agende sua<br>consulta<span class="decorador-texto-amarelo">.</span></h1>
 
                 <div class="social-media">
                     <div class="social-media-titulo">
