mudanças de estilo e correçoes ortográficas

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="estrutura">
         <header class="header">
             <nav class="js-menu">
-                <a href="#intro" class="logo"><img class="logo-img" src="svg/logo.svg" alt="Jaque Rosa"></a>
+                <a href="#intro" class="logo"><img class="logo-img" src="svg/logo.svg" alt="Rosa Psicologa"></a>
                 <ul class="nav-menu">
                     <li><a href="#sobre-mim">sobre</a></li>
                     <li><a href="#footer">contato</a></li>
@@ -97,7 +97,7 @@
             <div class="importancia-text">
 
                 <img class="decorador-amarelo-escuro2" src="svg/decorador-amarelo-escuro.svg" alt="Borboleta amarela">
-                <h1 class="h1-importancia">a importancia <br class="break"> da psicoterapia<span class="decorador-texto-azul">.</span></h1>
+                <h1 class="h1-importancia">a importância <br class="break"> da psicoterapia<span class="decorador-texto-azul">.</span></h1>
                 <p class="p-importancia">Gosto da representação da borboleta saindo do casulo, pois remete a transformação que cada indivíduo pode vivenciar através do contato consigo mesmo. Olhar para si pode ser muito doloroso, desse modo, faz-se importante o espaço que a psicoterapia
                     dispõe por oferecer acolhimento, escuta sem julgamento, empatia, e ainda facilita o autoconhecimento, a ressignificação, entre outros. </p>
                 <ul class="importancia-psicoterapia-icons">
