trocando formato de imagens

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
         <section class="intro box-anime" data-anime="scroll" id="intro">
-            <img class="intro-img" src="img/imagem-intro.png" alt="Borboleta introdução">
+            <img class="intro-img" src="img/imagem-intro.webp" alt="Borboleta introdução">
             <div class="intro-content">
                 <h1 class="h1-intro">Jaquelaine<br> Rosa</h1>
                 <h2 class="h2-intro"> psicoterapia online<span class="decorador-texto-amarelo">.</span></h2>
@@ -70,7 +70,7 @@
                 </ul>
             </div>
             <img class="decorador-amarelo-escuro1" src="svg/decorador-amarelo-escuro.svg" alt="Pequena borboleta">
-            <img class="atendimentos-online-img" id="atendimentos-online-img" src="img/atendimentos-online-img.jpg" alt="Atendimentos Online">
+            <img class="atendimentos-online-img" id="atendimentos-online-img" src="img/atendimentos-online-img.webp" alt="Atendimentos Online">
 
         </section>
 
@@ -81,7 +81,7 @@
                 <img class="mulher" src="svg/mulher.svg" alt="Feminismo simbolo">
                 <img class="pata" src="svg/pata.svg" alt="Pata de cachorro">
             </div>
-            <div class="sobre-mim-img"><img src="img/sobre-mim-img.png" alt="Jaque Rosa"></div>
+            <div class="sobre-mim-img"><img src="img/sobre-mim-img.webp" alt="Jaque Rosa"></div>
             <div class="sobre-mim-text ">
                 <h1 class="h1-sobre-mim">um pouquinho <br class="break"> sobre mim<span class="decorador-texto-amarelo">.</span></h1>
                 <p class="p-sobre-mim js-menu">Oiii, separei esse espacinho no site para uma breve apresentação. Sou natural de Paty do Alferes - RJ, neta/sobrinha de agricultores e filha de professor de geografia. Aos 18 anos vim para o Rio de Janeiro a fim de estudar e cá estou,
@@ -108,7 +108,7 @@
                 </ul>
             </div>
             <div class="importancia-img">
-                <img class="importancia-img" src="img/importancia-psicologia-img.png" alt="Borboleta e casulo" id="importancia-img-js">
+                <img class="importancia-img" src="img/importancia-psicologia-img.webp" alt="Borboleta e casulo" id="importancia-img-js">
             </div>
         </section>
 
